Fix image preloading (2)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
         <div class="container well">
             <div class="alert alert-info" id="loading"></div>
-            <div class="alert alert-danger" id="errorLoading"></div>
+            <div class="alert alert-danger" id="errorLoading">Erreur de chargement des images. Vérifiez votre connexion Internet puis <a href="#" onclick="location.reload();">rechargez la page</a>.</div>
             <div class="alert alert-danger" id="compa"></div>
             <div class="mb"><img src="" onclick="ah_click();" id="ah_img" title="Cliquez ici !" /></div>
             <div class="row"><div class="col-sm-2 col-md-2"><ul class="list-group"><li class="list-group-item"><span class="badge" id="nb_ah"></span> Ah prononcés</li></ul></div></div>
