Meta theme-color (Chrome for Android)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Denis Brogniart – Ah !</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
+        <meta name="theme-color" content="#2780e3">
         <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <style type="text/css">
