Add new icon sizes and status-bar-style for apple mobile

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <meta name="theme-color" content="#2780e3">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="icon" href="favicon.ico" />
+        <link rel="icon" sizes="193x193" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <style type="text/css">
             #ah_img, button, label {
                 cursor: pointer;
