--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="favicon.ico" />
         <link rel="icon" sizes="193x193" href="assets/img/favicon.png">
         <link rel="apple-touch-icon" href="assets/img/favicon.png">
+        <link rel="manifest" href="manifest.json">
         <style type="text/css">
             #ah_img, button, label {
                 cursor: pointer;
