--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             .mb {
                 margin-bottom: 16px;
             }
+            .small {
+                font-size: 10pt;
+                color: grey;
+                margin-bottom: 0;
+            }
         </style>
     </head>
     <body>
@@ -66,6 +71,7 @@
                 </div>
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a></p>
+            <p class="small">Version 1.0.1</p>
         </div>
         <script type="text/javascript">
             nb_ah = 0;
