--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
             img_ah_src = "assets/img/ah.gif";
             document.getElementById("checkFull").checked = false;
             repetitionInterval = 500;
+            imgArray = ['assets/img/ah.gif','assets/img/ah_full.gif'];
+            audioArray = ['assets/sounds/ah.mp3'];
             function checkAudio(type) {
                 if(!window.HTMLAudioElement) {
                     return false;
@@ -148,39 +150,94 @@
                 if(checkAudio == true) ah.play();
                 document.getElementById("nb_ah").innerHTML = nb_ah;
             }
-            function preloadImages() {
+            function preloadImages(array) {
                 document.getElementById("loading").style.display = "block";
-                document.getElementById("loading").innerHTML = "Chargement des images : 0/2";
+                document.getElementById("loading").innerHTML = "Chargement des images : 0/" + array.length;
                 var loadedImagesCount = 0;
-                var imageNames = ['assets/img/ah.gif','assets/img/ah_full.gif'];
+                var imageNames = array;
                 var imagesArray = [];
                 for (var i = 0; i < imageNames.length; i++) {
                     var image = new Image();
                     image.src = imageNames[i];
                     image.onload = function() {
                         loadedImagesCount++;
-                        document.getElementById("loading").innerHTML = "Chargement des images : "+ loadedImagesCount +"/2";
+                        document.getElementById("loading").innerHTML = "Chargement des images : "+ loadedImagesCount +"/"+ array.length;
 
                         if (loadedImagesCount >= imageNames.length) {
-                            endInit();
+                            preloadAudios(audioArray);
                         }
                     };
                     image.onerror = function() {
                         errorLoadingImages = true;
                         loadedImagesCount++;
                         document.getElementById("errorLoading").style.display = "block";
-                        document.getElementById("loading").innerHTML = "Chargement des images : "+ loadedImagesCount +"/2";
+                        document.getElementById("loading").innerHTML = "Chargement des images : "+ loadedImagesCount +"/"+ array.length;
 
                         if (loadedImagesCount >= imageNames.length) {
-                            endInit();
+                            preloadAudios(audioArray);
                         }
                     };
                     imagesArray.push(image);
                 }
                 return true;
             }
+            function preloadAudios(array) {
+                if (window.HTMLAudioElement) {
+                    var audioTestMp3 = document.createElement('audio');
+                    if (audioTestMp3.canPlayType && audioTestMp3.canPlayType("audio/mpeg")) {
+                        document.getElementById("loading").innerHTML = "Chargement des sons : 0/"+ array.length;
+                        var loadedAudioCount = 0;
+                        var errorLoadingAudio = false;
+                        var pourcentageLoadingAudio = 0;
+                        var audioFiles = array;
+                        var audioFilesLoaded = [];
+                        var errorLoadingAudioFunction = function() {
+                            if(audioFilesLoaded.indexOf(this.src) == -1) {
+                                loadedAudioCount++;
+                                var errorLoadingAudio = true;
+                                document.getElementById("loading").innerHTML = "Chargement des sons : "+ loadedAudioCount +"/"+ array.length;
+                                if (loadedAudioCount >= audioFiles.length) {
+                                    endInit();
+                                }
+                                audioFilesLoaded.push(this.src);
+                            }
+                        };
+                        var timeOutLoading = setTimeout(function() {
+                            if(loadedAudioCount == 0) {
+                                hacklol.completeLoading();
+                            }
+                        }, 5000);
+                        for (var i in audioFiles) {
+                            (function() {
+                                var audioPreload = new Audio();
+                                audioPreload.src = audioFiles[i];
+                                audioPreload.preload = "auto";
+                                audioPreload.oncanplaythrough = function() {
+                                    if(audioFilesLoaded.indexOf(this.src) == -1) {
+                                        loadedAudioCount++;
+                                        var pourcentageLoadingAudio = Math.round((100*loadedAudioCount)/audioFiles.length);
+                                        document.getElementById("loading").innerHTML = "Chargement des sons : "+ loadedAudioCount +"/"+ array.length;
+                                        
+                                        if (loadedAudioCount >= audioFiles.length) {
+                                            endInit();
+                                        }
+                                        audioFilesLoaded.push(this.src);
+                                    }
+                                };
+                                audioPreload.onerror = errorLoadingAudioFunction;
+                                audioPreload.onsuspend = errorLoadingAudioFunction;
+                                audioPreload.onabort = errorLoadingAudioFunction;
+                            }());
+                        }
+                    } else {
+                        endInit();
+                    }
+                } else {
+                    endInit();
+                }
+            }
             function init() {
-                preloadImages();
+                preloadImages(imgArray);
                 if(checkAudio == false) {
                     document.getElementById("compa").style.display = "block";
                     document.getElementById("compa").innerHTML = "Votre navigateur ne supporte pas la lecture de fichiers audio. Vous n'entendrez pas le ah de Denis Brogniart !";
