--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 color: grey;
                 margin-bottom: 0;
             }
+            #description {
+                font-size: 12pt;
+            }
         </style>
     </head>
     <body>
@@ -43,7 +46,8 @@
             <div class="alert alert-info" id="loading"></div>
             <div class="alert alert-danger" id="errorLoading">Une erreur de connexion est surveneue lors du chargement des images. Vérifiez votre connexion Internet puis <a href="#" onclick="location.reload();">rechargez la page</a>.</div>
             <div class="alert alert-danger" id="compa"></div>
-            <div class="mb"><img src="" id="ah_img" title="Cliquez ici !" /></div>
+            <p id="description">Le fameux Ah de Denis Brogniart ! Apparemment, les femmes ne savent pas faire de cabanes. Cliquez autant de fois que vous voulez sur Denis pour qu'il dise Ah, ou faites le répéter en cliquant sur le bouton prévu pour cela.</p>
+            <div class="mb"><img src="" id="ah_img" /></div>
             <div class="row"><div class="col-sm-2 col-md-2"><ul class="list-group"><li class="list-group-item"><span class="badge" id="nb_ah">0</span> Ah prononcés</li></ul></div></div>
             <div class="row">
                 <div class="col-md-4 col-sm-6">
@@ -70,8 +74,9 @@
                     </form>
                 </div>
             </div>
-            <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a></p>
-            <p class="small">Version 1.0.1</p>
+            <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
+            <p class="small">Version 1.0.2 – 24/06/2017</p>
+            <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (plus bas).</p>
         </div>
         <script type="text/javascript">
             // Pure JS. No Jquery.
@@ -159,6 +164,7 @@
                 }
                 nb_ah = nb_ah + 1;
                 document.getElementById("ah_img").src = img_ah_src;
+                document.getElementById("ah_img").title = "Cliquez ici !";
                 if(checkAudio == true) ah.play();
                 document.getElementById("nb_ah").innerHTML = nb_ah;
             }
@@ -277,9 +283,14 @@
                 ah_click();
             }
 
-            window.onload = function() {
-                init();
-            }
+            // When the page is entirely loaded, calling the init function who load the others assets (images, sounds)
+            document.onreadystatechange = () => {
+                if (document.readyState === 'complete') {
+                    init();
+                }
+            };
+
+            // Do you like ponies ?
         </script>
     </body>
 </html>
