--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="theme-color" content="#2780e3">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
         <link rel="icon" href="favicon.ico" />
         <link rel="icon" sizes="193x193" href="assets/img/favicon.png">
         <link rel="apple-touch-icon" href="assets/img/favicon.png">
